syntax = "proto3";
package pb_gen;

option go_package = "UNS/pb_gen/events";

import "objects.proto";
import "config.proto";

// RM prefix means an event initiated by Resource Manager

message RMRegisterResourceManagerEvent {
  string resourceManagerID = 1;
  RMConfiguration configuration = 2;
}

message RMUpdateAllocationsEvent {
  repeated JobAllocation jobAllocations = 1;

  int64 currentNanoTime = 255;
}

message RMUpdateJobsEvent {
  repeated Job newJobs = 1;
  repeated string removedJobIDs = 2;

  int64 currentNanoTime = 255;
}

message RMUpdateTimeEvent {
  int64 currentNanoTime = 255;
}

// SS prefix means an event initiated by Scheduler

message SSUpdateAllocationsEvent {
  repeated JobAllocation newJobAllocations = 1;
}
